Added spinner centering on page.

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,12 @@
   // todo - set vh to max size of window
   min-height: 100vh;
 }
+
+// Spinners
+.page-center-spinner-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
